zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__fun__nonliteral_decreasing_index.snap
---
source: zoc/src/syntax_tree/parser/tests/fun.rs
expression: "&err"
---
Some(
    LParen(
        ByteIndex(
            32,
        ),
    ),
)
